# Project_1

./: Dockerfile  README.md  docker-compose.yml
Project1/: .env.example  .gitignore  pyproject.toml
Project1/docs/: Dockerfile  index.html
Project1/sitehotel/hotelrooms/: models.py
Project1/sitehotel/hotelrooms/migrations/: 0002_rename_room_id_roomreservations_room.py  0003_hotelroom_room_number_alter_roomreservations_room.py
docs/: swagger.yaml
nginx/: nginx.conf
sitehotel/hotelrooms/: serializers.py  tests.py  views.py
sitehotel/hotelrooms/migrations/: 0001_initial.py  0004_alter_hotelroom_room_number_and_more.py  0005_remove_roomreservations_room_and_more.py  0006_rename_room_number_roomreservations_room.py
sitehotel/sitehotel/: asgi.py  settings.py  urls.py  wsgi.py
